--- a/role-Cloud-VM-Provision.yml
+++ b/role-Cloud-VM-Provision.yml
@@ -4,7 +4,7 @@
   tasks:
           
   tasks:
-  - name: include AWS-VMCreation
+  - name: include Cloud-VM-Provision
     include_role: 
-     name: AWS-VMCreation
+     name: Cloud-VM-Provision
   
